# Smc-CAT

./: .gitignore  CMakeLists.txt  LICENSE  readme.md
.devcontainer/: Dockerfile
src/: main.cpp
src/analysis/: CompositionAnalysis.cpp  CompositionAnalysis.hpp  Likelihood.cpp  Likelihood.hpp  Mcmc.cpp  Mcmc.hpp  Model.cpp  Model.hpp  Particle.cpp  Particle.hpp  RateMatrices.hpp  SerializedParticle.hpp  TransitionProbability.cpp  TransitionProbability.hpp  TransitionProbabilityClass.cpp  TransitionProbabilityClass.hpp  Tree.cpp  Tree.hpp
src/core/: Alignment.cpp  Alignment.hpp  Math.cpp  Math.hpp  Miscellaneous.hpp  Msg.cpp  Msg.hpp  Probability.cpp  Probability.hpp  ProbabilityFunctions.hpp  RandomVariable.cpp  RandomVariable.hpp  Settings.cpp  Settings.hpp  Types.hpp
tests/: tree_tests.cpp
